# inventory-manager

./: CMakeLists.txt  README.md
include/: database.h  inventory_manager.h  item.h  ui.h
src/: database.cpp  inventory_manager.cpp  main.cpp  ui.cpp
